fix contrast errors with buttons and style highlighs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,6 @@ html, body {
     flex: 1;
 }
 
-
 /* Header */
 header {
     background-color: #FFFFFF;
@@ -139,6 +138,8 @@ main {
     padding-top: 1.2rem;
 }
 
+/* The typing container */
+
 .typing_container {
     width: 600px;
     /* Adjust as needed */
@@ -180,6 +181,8 @@ main {
     /* Add a delay to the cursor blink animation and limit iterations */
     cursorBlink .75s step-end 1s 5;         
 }
+
+/* End of typing effect */
 
 .section_text {
     width: 90%;
@@ -263,7 +266,7 @@ img {
 
 /* Number text (1/3 etc) */
 .numbertext {
-    color: #fff;
+    color: #000;
     font-size: 0.8rem;
     padding: 8px 12px;
     position: absolute;
@@ -556,13 +559,11 @@ iframe {
     .container,
     .highlight {
         flex-direction: column;
-        /* Revert to row layout */
     }
 
     .content_text,
     .content_photo {
         padding: 10px;
-        /* Standard padding */
         width: 50%;
     }
 
@@ -615,6 +616,10 @@ iframe {
     .container,
     .highlight {
         flex-direction: row;
+    }
+
+    .reverse {
+        flex-direction: row-reverse;
     }
 }
 
@@ -738,8 +743,8 @@ input[type=checkbox] {
 }
 
 button[type=submit] {
-    background-color: gray;
-    color: white;
+    background-color: rgb(60, 60, 60);
+    color: rgb(255, 255, 255);
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
@@ -781,4 +786,19 @@ button[type=submit]:hover {
 .contact_form h1 {
     text-align: center;
     color: #f0f0f0;
+}
+
+/* -------------- */
+/* 404 not found  */
+/* -------------- */
+
+#background-not-found {
+    background: url("../images/background/brandenburg.jpeg") no-repeat center center/cover;
+    height: 45rem;
+    padding: 5rem 10% 0 10%;
+}
+
+#background-not-found>h1 {
+    text-align: center;
+    color: #000
 }
